# WBC_camera

./: .gitignore  AGENTS.md  README.md  README_zh.md  architecture.md  diary.md  issues_description.txt  ref_1.markdown  vid2pic.py
cr_no_v.SLDASM/: CMakeLists.txt  package.xml
cr_no_v.SLDASM-v1/launch/: gazebo.launch
cr_no_v.SLDASM-v1/meshes/: arm_seg4.STL  base_link.STL
cr_no_v.SLDASM-v1/urdf/: cr_no_v.SLDASM.urdf
cr_no_v.SLDASM-v2/config/: joint_names_cr_no_v.SLDASM.yaml
cr_no_v.SLDASM-v2/launch/: display.launch
cr_no_v.SLDASM-v2/urdf/: cr_no_v.SLDASM.csv  cr_no_v.SLDASM.urdf
cr_no_v.SLDASM/meshes/: Rob_base.STL
cr_no_v.SLDASM/urdf/: cr_no_v.SLDASM.csv
docs/: 1_pull_world_status.md  codegen_overview.md  cpp_conversion_plan.md  gik_constraints.md  gik_development_plan.md  moveit_ik_solver.md  moveit_migration_plan.md  obstacle_disc_summary.md  ros2_graph.dot  ros2_realtime_execution.md  ros2_whole_body_interfaces.md  software_architecture.md  software_architecture_zh.md  startup_pose_strategy.md  time_history.md  visualization.md
matlab/: 1_pull_world.json  1_pull_world_results.mat  1_pull_world_zenddown.json  3_round_world.json  README.md  arm_joint_controller.m  arm_joint_limits.m  chassis_obstacles.m  debug_compare_streaming.m  debug_diff_sync_inputs.m  diff_drive_tracker.m  generate_external_trajectory.m  moveit_joint_trajectory_playback.m  plot_pull_world_xy.m  plot_ramp_overview.m  rt_compute_arm_gik.m  rt_compute_arm_ik.m  rt_whole_body_controller.m  run_arm_ramp_inspection.m  run_camera_motion_tests.m  run_capture_baseline.m  run_whole_body_demo.m  split_trajectory.m
matlab/+helpers/: animate_whole_body.m  compute_ee_metrics.m  hybrid_astar_plan.m  load_collision_mesh.m  plot_chassis_profile.m  plot_ee_comparison.m  plot_joint_trajectories.m  plot_performance_metrics.m  plot_planar_path.m  retime_joint_trajectory.m
matlab/+wbc/: build_base_to_ee_targets.m  compute_base_heading.m  compute_home_base_pose.m  compute_metrics.m  configure_arm_collision_avoidance.m  estimate_max_curvature.m  evaluate_ik_pose_error.m  normalize_collision_avoidance_entries.m  plan_ramp_segment.m  prepare_reference_data.m  solve_arm_ik.m  stream_tracking_with_buffer.m  sync_base_and_arm.m
matlab/+wbc_codegen/: compute_tracking_metrics.m  retime_joint_trajectory.m  sync_base_and_arm.m
matlab/codegen/: run_wbc_codegen_examples.m
matlab/outputs/: 1_pull_world_results.mat
matlab/tests/: legacy_baseline.mat  test_plan_ramp_segment.m  test_prepare_reference_data.m
matlab/tests/outputs/: demo_arc_results.mat
mobile_arm_whole_body/: CMakeLists.txt  README.md  package.xml
mobile_arm_whole_body/action/: ExecuteWholeBody.action
mobile_arm_whole_body/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  planning_pipelines.yaml
mobile_arm_whole_body/include/mobile_arm_whole_body/: command_utils.hpp  moveit_ik_solver.hpp  reference_buffer.hpp
mobile_arm_whole_body/launch/: whole_body_demo.launch.py  whole_body_realtime.launch.py
mobile_arm_whole_body/meshes/: cr_no_V.stl
mobile_arm_whole_body/msg/: BaseProfile.msg  CoordinatorStatus.msg  EndEffectorReference.msg  StageInfo.msg  SyncStatus.msg  WholeBodyCommand.msg  WholeBodyMetrics.msg
mobile_arm_whole_body/scripts/: world_joint_to_cmd_vel.py
mobile_arm_whole_body/src/: moveit_ik_solver.cpp  whole_body_coordinator_node.cpp  whole_body_input_node.cpp  whole_body_ramp_planner_node.cpp
mobile_arm_whole_body/srdf/: arm_on_car_center_whole_body.srdf
mobile_arm_whole_body/urdf/: arm_on_car_center_rotZ_n90_center.urdf  arm_on_car_center_rotZ_neg90.urdf
mobile_arm_whole_body_bringup/: CMakeLists.txt  package.xml
mobile_arm_whole_body_bringup/launch/: whole_body_streaming.launch.py
mobile_arm_whole_body_bringup/rviz/: whole_body_monitor.rviz
mobile_arm_whole_body_control/: CMakeLists.txt  package.xml
mobile_arm_whole_body_control/include/mobile_arm_whole_body_control/: trajectory_utils.hpp
mobile_arm_whole_body_control/src/: arm_trajectory_publisher_node.cpp  base_motion_commander_node.cpp  base_planner_node.cpp  obstacle_manager_node.cpp  planner_stub_node.cpp  trajectory_ingestor_node.cpp  trajectory_utils.cpp  whole_body_planner_node.cpp  whole_body_supervisor_node.cpp
mobile_arm_whole_body_control/test/: test_base_planner_launch.py.disabled  test_supervisor_handshake.py  test_trajectory_utils.cpp
mobile_arm_whole_body_interfaces/: CMakeLists.txt  package.xml
mobile_arm_whole_body_interfaces/msg/: CameraPoseStatus.msg  CameraPoseTarget.msg  TrackingPhaseState.msg
mobile_arm_whole_body_interfaces/srv/: PlanArmRamp.srv  PlanBaseRamp.srv  PlanTrackingSegment.srv
outputs/: 1_pull_world_results.mat  crane_up_results.mat  demo_arc_results.mat  demo_line_results.mat  dolly_forward_results.mat  orbit_left_results.mat  pan_tilt_results.mat
tools/: create_feature_branch.sh  git_sync.sh  plot_whole_body_log.py  run_whole_body_stack.sh
