<?xml version="1.0"?>
<package format="3">
  <name>mobile_arm_whole_body_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the whole-body MoveIt deployment.</description>
  <maintainer email="placeholder@example.com">TODO Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mobile_arm_whole_body_control</exec_depend>
  <exec_depend>mobile_arm_whole_body_interfaces</exec_depend>
  <exec_depend>mobile_arm_whole_body</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
