<?xml version="1.0"?>
<package format="3">
  <name>mobile_arm_whole_body_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 interface definitions for the whole-body MoveIt control stack.</description>
  <maintainer email="placeholder@example.com">TODO Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
